<resources>
    <string name="app_name">Team Traveler</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_setting">Paramètres</string>
    <string name="action_confi">Confidentialité</string>
    <string name="action_help">Aide</string>
    <string name="action_log_off">Se Déconnecter</string>
    <string name="mesVoyages">Mes Voyages</string>
    <string name="calendrier_modif">Gérer mes dates</string>
    <string name="Voyages_terminés">Voyages terminés</string>
    <string name="new_voyage">Créer un voyage</string>
    <string name="home_first_co_text">Bienvenue, \n\n Pour commencer, créer un voyage !</string>
    <string name="no_trip_yet">Vous n\'avez pas encore créé de voyage</string>
    <string name="name_voyage">Nom du voyage</string>
    <string name="location_voyage">Lieu</string>
    <string name="connexion">connexion</string>
    <string name="msg_trip_name_absent">Veuillez entrer un nom de voyage!</string>
    <string name="msg_user_not_connected_newTrip">Veuillez vous connecter pour créer un voyage</string>
    <string name="msg_trip_saved_newTrip">Votre voyage est enregistré</string>
    <string name="msg_auth_success_login">Authentication réussie</string>
    <string name="msg_auth_failed_login">Authentication échouée</string>
    <string name="msg_ident_required_register">Le champ Identifiant est obligatoire</string>
    <string name="msg_email_required_regiter">Le champ Email est obligatoire</string>
    <string name="msg_psw_required_register">Le champ mot de passe est obligatoire</string>
    <string name="msg_psw_confrm_required_register">Les deux mots de passes ne sont pas identiques</string>
    <string name="msg_psw_lenth_not_respected_register">La longueur du mot de passe doit etre superieur à 6</string>
    <string name="msg_register_success_register">Inscription réussie</string>
    <string name="msg_register_failed_register">E-mail ou mot de passe incorecte</string>
    <string name="txt_btn_list_trip_home_page">Liste voyages</string>
    <string name="error_lenth_name_trip_create_trip">Longueur max est dépassée</string>
    <string name="error_name_required_create_trip">Le nom est obligatoire !</string>
    <string name="msg_trip_name_length_exceed">La longueur max est dépassée</string>
    <string name="msg_trip_place_length_exceed">La longueur max est dépassée</string>


    <string name="msg_user_sign_out">Vous etes déconnecté</string>
    <string name="msg_list_trip_in_progress_is_empty">Aucun voyage en cours</string>
    <string name="msg_list_trip_completed_is_empty">Aucun voyage </string>

    <string name="msg_list_housing_is_empty">Aucun logement</string>
    <string name="error_name_required_create_housing">Le nom est obligatoire!</string>
    <string name="msg_housing_name_length_exceed">La longueur max est dépassé</string>
    <string name="msg_field_must_be_integer_housing">Le champ doit etre un nombre</string>
    <string name="error_length_name_housing_create_housing">Longueur max est dépassée</string>
    <string name="error_length_name_housing_edit_housing">Longueur max est dépassée</string>
    <string name="msg_housing_saved_newhousing">Votre logement est enregistré</string>
    <string name="msg_updates_saved_edit_housing">Vos modifications sont enregistrées</string>
    <string name="msg_name_is_required_edit_housing">Le nom est obligatoire !</string>
    <string name="msg_housing_others_length_exceed">La longueur max est dépassée</string>
    <string name="error_length_field_others_exceed_housing">Longueur max est dépassée</string>
    <string name="edit_housing_title">Détail de logement</string>
    <string name="housing_detail_title">Détail de logement</string>
    <string name="new_trip_title">Créer un voyage</string>
    <string name="create_housing_title">Créer un logement</string>

    <string name="msg_activity_updated_new_activity">Vos modifications sont enregistrées</string>
    <string name="msg_list_activity_is_empty">La liste d\'activitées est vide</string>
    <string name="update_activity_title">Activité</string>
    <string name="detail_activity_title">Detail de l\'activité</string>
    <string name="create_activity_title">Nouvelle activité</string>
    <string name="msg_activity_saved_new_activity">Votre activité est enregistré</string>
    <string name="msg_activity_entitled_length_exceed">La longueur max est dépassé</string>
    <string name="error_entitled_required_create_activity">Le nom est obligatoire !</string>
    <string name="error_type_required">Le type est obligatoire !</string>
    <string name="msg_field_must_be_integer_activity">Le champ doit etre un nombre</string>
    <string name="error_length_entitled_housing_create_activity">Longueur max est dépassée</string>

    <string name="opinion_not_participate">Je participe pas</string>
    <string name="opinion_participate">Je participe</string>
    <string name="opinion_interested">Interessé(e)</string>
    <string name="without_opinion">Sans avis</string>
    <string name="activity_proposed_by">Proposée par : </string>
    <string name="nb_participants_recycler_activity_item"> participant(s)</string>
    <string name="activity_proposed_by_you">Vous</string>
    <string name="transport_proposed_by_you">Vous</string>
    <string name="trip_proposed_by_you">Vous</string>
    <string name="create_transport_title">Nouveau transport</string>
    <string name="departureAndReachTimes"><![CDATA[=>]]></string>
    <string name="departure_transport">Départ:</string>
    <string name="reach_transport">Arrivé:</string>
    <string name="departure_location_not_specified">Non renseigné</string>
    <string name="reach_location_not_specified">Non renseigné</string>
    <string name="sort_housing_by">Trier par:</string>
    <string name="txt_btn_sort_by_price">Prix</string>
    <string name="txt_btn_sort_by_range">Classement</string>
    <string name="type_transport_car">Voiture</string>
    <string name="type_transport_train">Train</string>
    <string name="type_transport_airplane">Avion</string>
    <string name="type_transport_bus">Bus</string>
    <string name="join_transport_opinion">Rejoindre ce transport</string>
    <string name="exit_transport">Quitter ce transport</string>
    <string name="join_transport_txt_btn">Rejoindre ce transport</string>
    <string name="exit_transport_txt_btn">Quitter ce transport</string>
    <string name="nb_participants_detail_trip">partcipant(s)</string>
    <string name="participate_to_trip">Participe au voyage</string>

    <string name="update_transport_title">Transport</string>
    <string name="reset_password">Merci d\'indiquer votre adresse Email pour réinitialiser votre mot de passe.</string>
    <string name="reset_password_title">Réinitialiser le mot de passe</string>
    <string name="text2_password_reset">Si votre adresse correspond à un compte, un email vous sera envoyé pour réinitialiser votre mot de passe.</string>
    <string name="detail_transport_title">Detail de transport</string>
    <string name="you_join_transport">Vous</string>
    <string name="departure_date_not_spicified">Date départ non renseignée</string>
    <string name="departure_time_not_specified">Heure départ non renseignée</string>
    <string name="reach_time_not_specified">Heure d\'arrivé non renseignée</string>
    <string name="transport_type_not_specified">Type non renseigné</string>
    <string name="trip_start_date_not_spicified">Non renseignée</string>
    <string name="trip_end_date_not_spicified">Non renseignée</string>
    <string name="date_transport_not_specified">Non renseignée</string>
    <string name="time_departure_not_specified">Non renseignée</string>
    <string name="time_reach_not_specified">Non renseignée</string>
    <string name="note_housing_not_specified">Note non precisée</string>
    <string name="link_app_detail_trip">team.traveler.com/</string>
    <string name="location_not_specified_detail_trip">Pas de lieu définie</string>
    <string name="date_not_specified">Pas de date définie</string>
    <string name="msg_list_transport_is_empty">La liste de transport est vide</string>
    <string name="askQuit">Etes-vous sûr de vouloir quitter le Voyage</string>
    <string name="text_message_quitter">Êtes-vous sûr de vouloir quitter le voyage "</string>
    <string name="no_trip_completed_yet">Vous n\'avez pas encore terminé de voyage</string>
    <string name="no_activity_yet">Vous n\'avez pas encore proposé d\'activité</string>
    <string name="no_transport_yet">Vous n\'avez pas encore proposé de transport</string>
    <string name="no_housing_yet">Vous n\'avez pas encore proposé de logement</string>
    <string name="msg_choice_trip_to_share_housing">Choissisez un voyage pour créer le logement</string>
    <string name="error_name__trip_required_create_housing">Le nom du voyage est obligatoire</string>
    <string name="name_trip_is_required_create_housing">Veuillez renseigner le nom du voyage</string>
    <string name="title_update_trip">Modifier le voyage</string>
    <string name="logement_title_detail_housing">Logement</string>
    <string name="logement_title_new_housing">Nouveau logement</string>
    <string name="supprimer_activity_message">Êtes-vous sur de vouloir supprimer l\'activité</string>
    <string name="supprimer_housing_message">Êtes-vous sur de vouloir supprimer le logement</string>
    <string name="supprimer_transport_message">Êtes-vous sur de vouloir supprimer le transport</string>
    <string name="leave_trip">Quitter le voyage</string>
    <string name="text_sign_up_btn">S\'inscrire</string>
    <string name="chose_type_of_share">Choisissez un mode de partage</string>
    <string name="msg_trip_dont_exist">Le voyage a était supprimé ou il n\'existe pas</string>
    <string name="email_reset_psw_sended">Email Envoyé</string>
    <string name="give_valid_psw">veuillez entrez un mot de passe valide</string>
    <string name="txt_delete">Supprimer</string>

</resources>
