<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".presentation.homePage.HomePageActivity"
    tools:showIn="@layout/activity_home_page">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="136dp"
        android:layout_marginTop="128dp"
        android:text="@string/home_first_co_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_create_new_trip"
        android:layout_width="339dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorstandard"
        android:ellipsize="none"
        android:text="@string/new_voyage"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button_list_trip"
        android:layout_width="339dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorstandard"
        android:ellipsize="none"
        android:text="@string/txt_btn_list_trip_home_page"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_create_new_trip" />
</androidx.constraintlayout.widget.ConstraintLayout>