<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_cardview"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="335dp"
        android:layout_height="385dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayoutProfileCardView"
            android:layout_width="match_parent"
            android:layout_height="385dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="#00FFFFFF"
                app:layout_constraintBottom_toBottomOf="@+id/textView_title_password_reset"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_cancel" />

            <TextView
                android:id="@+id/textView_text1_password_reset"
                android:layout_width="297dp"
                android:layout_height="52dp"
                android:layout_marginTop="60dp"
                android:text="@string/reset_password"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_title_password_reset" />

            <TextView
                android:id="@+id/textView_title_password_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/reset_password_title"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText_email_reset_password"
                android:layout_width="247dp"
                android:layout_height="40dp"
                android:layout_marginTop="36dp"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_text1_password_reset" />

            <TextView
                android:id="@+id/textView_text2_password_reset"
                android:layout_width="293dp"
                android:layout_height="64dp"
                android:layout_marginTop="24dp"
                android:text="@string/text2_password_reset"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/textView_text1_password_reset"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView_text1_password_reset"
                app:layout_constraintTop_toBottomOf="@+id/editText_email_reset_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_send_reset_password"
        android:layout_width="336dp"
        android:layout_height="64dp"
        android:text="Envoyer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.271" />

</androidx.constraintlayout.widget.ConstraintLayout>